refactor: remove Slot definition and related fields from user API
