# docs/swagger.yaml
@@ -10,25 +10,8 @@ definitions:
       is_admin:
         description: 是否为系统管理员
         type: boolean
-      slots:
-        description: Slots 列表
-        items:
-          $ref: '#/definitions/bunker-web_routers_openapi_user.Slot'
-        type: array
       username:
         description: 用户名
-        type: string
-    type: object
-  bunker-web_routers_openapi_user.Slot:
-    properties:
-      expire_at:
-        description: Slots 有效期至
-        type: integer
-      game_id:
-        description: Slots 绑定的游戏ID
-        type: integer
-      note:
-        description: Slots 备注
         type: string
     type: object
   g79.RentalServerInfo:
